--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,7 @@ generated/prisma/
 typings/
 **/__screenshots__/
 __screenshots__/
+
+# Environment files con datos sensibles (opcional, según el proyecto)
+# src/environments/environment.ts
+# src/environments/environment.development.ts
