--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -17,6 +17,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
+            "outputPath": "dist/Frontend",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
